--- a/db/dbconf.yml
+++ b/db/dbconf.yml
@@ -1,3 +1,3 @@
 development:
   driver: mymysql
-  open: tcp:mysql:3306*golang/golang/golang
+  open: tcp:mysql:3306*$MYSQL_DATABASE/$MYSQL_USER/$MYSQL_PASSWORD
