--- a/db/dbconf.yml
+++ b/db/dbconf.yml
@@ -1,3 +1,7 @@
 development:
   driver: mymysql
   open: tcp:mysql:3306*$MYSQL_DATABASE/$MYSQL_USER/$MYSQL_PASSWORD
+
+test:
+  driver: mymysql
+  open: tcp:mysql:3306*$MYSQL_DATABASE_TEST/$MYSQL_ROOT_USER/$MYSQL_ROOT_PASSWORD
