--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - mysql
       - redis
     container_name: golang-container
+    environment:
+      MODE: "develop"
 
   redis:
     image: redis
@@ -33,6 +35,7 @@ services:
     volumes:
       - ./db/data:/var/lib/mysql
       - ./db/data:/var/log/mysql
+      - ./db/init:/docker-entrypoint-initdb.d
       - ./db/my.cnf:/etc/mysql/conf.d/my.cnf
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
